--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 DATABASE_PASSWORD=521368
 DATABASE=mongodb+srv://root:<PASSWORD>@cluster0.inyueo4.mongodb.net/natours?retryWrites=true&w=majority
+JWT_SECRET=pham-minh-duy
+JWT_EXPIRES_IN=1d
