Complete authen and author

--- a/config.env
+++ b/config.env
@@ -4,3 +4,8 @@ DATABASE_PASSWORD=521368
 DATABASE=mongodb+srv://root:<PASSWORD>@cluster0.inyueo4.mongodb.net/natours?retryWrites=true&w=majority
 JWT_SECRET=pham-minh-duy
 JWT_EXPIRES_IN=1d
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
+EMAIL_USERNAME=ac4906a252fcf0
+EMAIL_PASSWORD=6020c06338108e
+JWT_COOKIE_EXPIRES_IN=1
