--- a/package.json
+++ b/package.json
@@ -1,36 +1,58 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "Learning node, express and mongodb",
+  "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
-  "author": "Jonas",
+  "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
-    "hpp": "^0.2.3",
+    "@babel/polyfill": "^7.4.4",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.0",
+    "helmet": "^3.16.0",
+    "hpp": "^0.2.2",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "slugify": "^1.6.5",
+    "mongoose": "^5.5.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
+    "pug": "^3.0.2",
+    "sharp": "^0.32.0",
+    "slugify": "^1.3.4",
+    "stripe": "^7.0.0",
     "validator": "^13.9.0",
-    "xss": "^1.0.14",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.4",
-    "prettier": "^2.8.2"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "parcel-bundler": "^1.8.1",
+    "prettier": "^1.17.0"
+  },
+  "engines": {
+    "node": "^10"
   }
 }
